--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,8 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+title: 怎么又得起名字
+email: jasper.ys.wang@gmail.com
+url: "http://wyushi.github.io" # the base hostname & protocol for your site
 
 # Build settings
 markdown: kramdown
+excerpt_separator: <!--more-->
