--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,5 @@ url: "http://wyushi.github.io" # the base hostname & protocol for your site
 # Build settings
 markdown: kramdown
 excerpt_separator: <!--more-->
+gems:
+    - jekyll-gist
